--- a/M.HYUNDAI-CE.HTML
+++ b/M.HYUNDAI-CE.HTML
@@ -25,54 +25,54 @@
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/20DA-7E.HTML">20DA-7E</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/250D-7E.HTML">250D-7E</option>      
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/25D-7E.HTML">25D-7E</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/IONIQ5.HTML">IONIQ5</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/KONA.HTML">KONA</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/NEXO.HTML">NEXO</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PALISADE.HTML">PALISADE</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PORTER(TOP).HTML">PORTER(TOP)</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PORTER.HTML">PORTER</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/SANTAFE.HTML">SANTAFE</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/SONATA.HTML">SONATA</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/STARIA.HTML">STARIA</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/TUCSON.HTML">TUCSON</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/VELOSTER.HTML">VELOSTER</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/VENUE.HTML">VENUE</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/G70.HTML">G70</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/G80.HTML">G80</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/G90.HTML">G90</option>      
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/GV70.HTML">GV70</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/GV80.HTML">GV80</option>      
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/I30.HTML">I30</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/IONIQ5.HTML">IONIQ5</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/KONA.HTML">KONA</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/NEXO.HTML">NEXO</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PALISADE.HTML">PALISADE</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PORTER(TOP).HTML">PORTER(TOP)</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PORTER.HTML">PORTER</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/SANTAFE.HTML">SANTAFE</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/SONATA.HTML">SONATA</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/STARIA.HTML">STARIA</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/TUCSON.HTML">TUCSON</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/VELOSTER.HTML">VELOSTER</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/VENUE.HTML">VENUE</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/G70.HTML">G70</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/G80.HTML">G80</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/G90.HTML">G90</option>      
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/GV70.HTML">GV70</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/GV80.HTML">GV80</option>      
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/I30.HTML">I30</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/IONIQ5.HTML">IONIQ5</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/KONA.HTML">KONA</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/NEXO.HTML">NEXO</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PALISADE.HTML">PALISADE</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PORTER(TOP).HTML">PORTER(TOP)</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/PORTER.HTML">PORTER</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/SANTAFE.HTML">SANTAFE</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/SONATA.HTML">SONATA</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/STARIA.HTML">STARIA</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/TUCSON.HTML">TUCSON</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/VELOSTER.HTML">VELOSTER</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/VENUE.HTML">VENUE</option>   
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/30D-7E.HTML">30D-7E</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/45D-9A.HTML">45D-9A</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/50L-7A.HTML">50L-7A</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/70DS-7E.HTML">70DS-7E</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL730-7A.HTML">HL730-7A</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL730-9.HTML">HL730-9</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL740-7A.HTML">HL740-7A</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL740-9.HTML">HL740-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL740TM-9.HTML">HL740TM-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL757-9.HTML">HL757-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL760-9A.HTML">HL760-9A</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL770-9A.HTML">HL770-9A</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL780-9.HTML">HL780-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL780-9S.HTML">HL780-9S</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL940.HTML">HL940</option>      
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL955.HTML">HL955</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL960.HTML">HL960</option>      
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL970.HTML">HL970</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HL980.HTML">HL980</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HX220L.HTML">HX220L</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HX260L.HTML">HX260L</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HX300L.HTML">HX300L</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HX330L.HTML">HX3300L</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HX380L.HTML">HX380L</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/HX520L.HTML">HX520L</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R140LC-9S.HTML">R140LC-9S</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R140W-9.HTML">R140W-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R160LC-9S.HTML">R160LC-9S</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R170W-9S.HTML">R170W-9S</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R180LC-9.HTML">R180LC-9</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R210LC-9.HTML">R210LC-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R210W-9S.HTML">R210W-9S</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R235LCR-9.HTML">R235LCR-9</option>      
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R25Z-9A.HTML">R25Z-9A</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R260LC-9S.HTML">R260LC-9S</option>      
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R290LC-9.HTML">R290LC-9</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R290LC-9LR.HTML">R290LC-9LR</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R300LC-9S.HTML">R300LC-9S</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R320LC-9.HTML">R320LC-9</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R330LC-9S.HTML">R330LC-9S</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R35Z-9.HTML">R25Z-9</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R320LC-9.HTML">R380LC-9</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R430LC-9A.HTML">R430LC-9A</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R480LC-9.HTML">R480LC-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R520LC-9.HTML">R520LC-9</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R520LC-9S.HTML">R520LC-9S</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R55.HTML">R55</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/HHI/R800LC.HTML">R800LC</option>   
                 
             </select>
     </form>
