--- a/M.VOLVO-CE.HTML
+++ b/M.VOLVO-CE.HTML
@@ -25,15 +25,15 @@
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC210BF.HTML">EC210BF</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC210BLC.HTML">EC210BLC</option>      
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC210DL.HTML">EC210DL</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC220DL.HTML">EC220DL</option>       
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC220EL.HTML">EC220EL</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC220DL.html">EC220DL</option>       
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC220EL.html">EC220EL</option>       
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC240BLC.HTML">EC240BLC</option>       
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC250DL.HTML">EC250DL</option>       
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC250DLR.HTML">EC250DLR</option>       
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC250EL.HTML">EC250EL</option>       
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC300DL.HTML">EC300DL</option>       
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC330BLC.HTML">EC330BLC</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC350DL.HTML">EC350DL</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC350DL.html">EC350DL</option> 
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC380DL.HTML">EC380DL</option> 
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC480DL.HTML">EC480DL</option>       
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO/EC55B.HTML">EC55B</option> 
