--- a/E.ETA.MASAN.HTML
+++ b/E.ETA.MASAN.HTML
@@ -26,7 +26,7 @@ month = date.getMonth() + 1;
 day = date.getDate();
 document.getElementById("current_date").innerHTML = year + "-" + month + "-" + day;
 </script>  
-  <input type="number" id="a" size="8" style="WIDTH: 100pt; HEIGHT: 40pt; font-size: 25px;">시
+  <input type="number" id="a" size="8" style="WIDTH: 100pt; HEIGHT: 40pt; text-align: center; font-size: 25px;">시
 
   </td>
 </tr>
@@ -44,7 +44,7 @@ document.getElementById("current_date").innerHTML = year + "-" + month + "-" + d
 3. Berth to P/S은 2시간으로 고려 되었습니다.
 <br>  
 <p style="text-align: center;" data-ke-size="size16">
-<button type="button" onclick="div()" style="WIDTH: 100pt; HEIGHT: 40pt; font-size: 25px;">계산하기</button>
+<button type="button" onclick="div()" style="WIDTH: 100pt; HEIGHT: 40pt; text-align: center; font-size: 25px;">계산하기</button>
 
   </div>
 <p data-ke-size="size ">&nbsp;</p>
@@ -85,8 +85,8 @@ document.getElementById("current_date").innerHTML = year + "-" + month + "-" + d
 </td>
 </tr>
 <tr style="height: 20px;">
-<td style="width: 25%; height: 20px; text-align: center;"><b>부산</b></td>
-<td style="width: 25%; height: 20px; text-align: center;">38</td>
+<td style="width: 25%; height: 20px; text-align: center;"><b>인천</b></td>
+<td style="width: 25%; height: 20px; text-align: center;">422</td>
 <td style="width: 50%; height: 20px; text-align: center;">
   <div id="current_date5"></p></div>  
 </td>
@@ -125,7 +125,7 @@ function setValue() {
 	m_2 = parseInt("330");
 	m_3 = parseInt("250");
 	m_4 = parseInt("107");
-	m_5 = parseInt("38");
+	m_5 = parseInt("422");
 	m_6 = parseInt("58");
 }
 function div() {	setValue();
