--- a/CARGO/KIA/NIRO.HTML
+++ b/CARGO/KIA/NIRO.HTML
@@ -12,8 +12,8 @@
 </tr>
 </tbody>
 </table>
-<p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.445 x 1.845 x 1.56</p>
-<p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.45</p>
+<p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.52 x 1.87 x 1.6</p>
+<p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.399/1.682</p>
 <p data-ke-size="size20"><b>STOWAGE CODE)</b> : NRO, NRE</p>
         <p data-ke-size="size20"><b>AEU</b> : 1.25</p>
 <p data-ke-size="size10">&nbsp;</p>
