--- a/CARGO/KIA/SORENTO.HTML
+++ b/CARGO/KIA/SORENTO.HTML
@@ -12,8 +12,8 @@
 </tr>
 </tbody>
 </table>
-<p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.92 x 1.98 x 1.73</p>
-<p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.885</p>
+<p data-ke-size="size20"><b>SIZE(L x W x H)</b> : 4.82 x 1.98 x 1.73</p>
+<p data-ke-size="size20"><b>WEIGHT(MT)</b> : 1.891/2.006(HEV)</p>
 <p data-ke-size="size20"><b>STOWAGE CODE</b> : SRT</p>
         <p data-ke-size="size20"><b>AEU</b> : 1.46</p>
 <p data-ke-size="size10">&nbsp;</p>
