--- a/VESSEL/FIDELIO.HTML
+++ b/VESSEL/FIDELIO.HTML
@@ -191,7 +191,7 @@
 </tr>
 </tbody>
 </table>
-<p data-ke-size="size16">※ Detail Bogie Load shoud be check with ship's Drawing(Midships section)</p>
+<p data-ke-size="size16">※ Detail Bogie Load shoud be checked with ship's Drawing(Midships section)</p>
 <p data-ke-size="size16">&nbsp;</p>
 <p data-ke-size="size16">3) RAMP INFORMATION</p>
 <table style="border-collapse: collapse; width: 100%; height: 68px;" border="1" data-ke-align="alignLeft">
