--- a/VESSEL.HTML
+++ b/VESSEL.HTML
@@ -33,6 +33,7 @@
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/DON CARLOS.HTML">DON CARLOS</option>                
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/DON JUAN.HTML">DON JUAN</option> 
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/DON PASQUALE.HTML">DON PASQUALE</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/VESSEL/DON QUIJOTE.HTML">DON QUIJOTE</option> 
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/DREAM ANGEL.HTML">DREAM ANGEL</option>                
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/DREAM BEAUTY.HTML">DREAM BEAUTY</option> 
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/DREAM DIAMOND.HTML">DREAM DIAMOND</option> 
