--- a/E.ETA.INCHEON.HTML
+++ b/E.ETA.INCHEON.HTML
@@ -85,7 +85,7 @@ document.getElementById("current_date").innerHTML = year + "-" + month + "-" + d
 </td>
 </tr>
 <tr style="height: 20px;">
-<td style="width: 25%; height: 20px; text-align: center;"><b></b></td>
+<td style="width: 25%; height: 20px; text-align: center;"><b>평택</b></td>
 <td style="width: 25%; height: 20px; text-align: center;">60</td>
 <td style="width: 50%; height: 20px; text-align: center;">
   <div id="current_date5"></p></div>  
