--- a/E.OVERHANG.HTML
+++ b/E.OVERHANG.HTML
@@ -49,24 +49,24 @@
 
   </div>
 <p data-ke-size="size ">&nbsp;</p>
-<table style="border-collapse: collapse; width: 100%; height: 140px;" border="1" data-ke-align="alignLeft">
+<table style="border-collapse: collapse; width: 100%; height: 200px;" border="1" data-ke-align="alignLeft">
 <tbody>
-<tr style="height: 20px;">
-<td style="width: 25%; height: 20px; text-align: center;", bgcolor="50BE96"><b>Increased height (MTR)</b></td>
+<tr style="height: 25px;">
+<td style="width: 25%; height: 20px; text-align: center;font-size: 25px;", bgcolor="50BE96"><b>Increased height (MTR)</b></td>
 
 </tr>
-<tr style="height: 20px;">
-<td style="width: 25%; height: 20px; text-align: center;"><b>  <div id="current_date1"></p></div>  </b></td>
-
-</tr>
-</tr>
-<tr style="height: 20px;">
-<td style="width: 25%; height: 20px; text-align: center;", bgcolor="50BE96"><b>Calculated max height (MTR)</b></td>
+<tr style="height: 25px;">
+<td style="width: 25%; height: 20px; text-align: center;font-size: 25px;"><b>  <div id="current_date1"></p></div>  </b></td>
 
 </tr>
 </tr>
-<tr style="height: 20px;">
-<td style="width: 25%; height: 20px; text-align: center;"><b>  <div id="current_date2"></p></div>  </b></td>
+<tr style="height: 25px;">
+<td style="width: 25%; height: 20px; text-align: center;font-size: 25px;", bgcolor="50BE96"><b>Calculated max height (MTR)</b></td>
+
+</tr>
+</tr>
+<tr style="height: 25px;">
+<td style="width: 25%; height: 20px; text-align: center; font-size: 25px;"><b>  <div id="current_date2"></p></div>  </b></td>
 
 </tr>
 </tbody>
