--- a/ETC.HTML
+++ b/ETC.HTML
@@ -22,6 +22,7 @@
           <option value="https://AWEGG0416.GITHUB.IO/E.PILOT.HTML">도선예보</option> 
           <option value="https://AWEGG0416.GITHUB.IO/E.ETA.HTML">ETA 계산기</option>
           <option value="https://AWEGG0416.GITHUB.IO/E.OVERHANG.HTML">OVERHANG 계산기</option>  
+          <option value="https://poki.com/kr#utm_source=redirect-en-ko">심심풀이 게임 모음</option>  
           <option value="https://www.bbc.com/">======</option> 
        </select>
     </form>
