--- a/ETC.HTML
+++ b/ETC.HTML
@@ -21,8 +21,9 @@
           <option value="선박선택">항목선택</option> 
           <option value="https://AWEGG0416.GITHUB.IO/E.PILOT.HTML">도선예보</option> 
           <option value="https://AWEGG0416.GITHUB.IO/E.ETA.HTML">ETA 계산기</option>
+          <option value="https://www.komdi.or.kr/ukiwi/biz/info/ukiwiBizInfoIMDGCodeList.do">IMDG 정보</option>  
           <option value="https://AWEGG0416.GITHUB.IO/E.OVERHANG.HTML">OVERHANG 계산기</option>  
-          <option value="https://www.bbc.com/">======</option> 
+          <option value="https://poki.com/">======</option> 
        </select>
     </form>
     <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/READY.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
